examples/test/testpolicy17635.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17635
  namespace: namespace73
spec:
  podSelector:
    matchLabels:
      key22: value4
      key27: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key40: value18
          key45: value48
      podSelector:
        matchLabels:
          key39: value1
          key40: value40
